Fixed following bugs 1)No rounded values for max, avg, min in for web client 2)Hide Captured CO2 card when data = null 3)Fixed responsive issue on web 3)Made changes to stop CSS bleeding from NDVI to other components

--- a/web/stylesheet/NDVI/time-series.scss
+++ b/web/stylesheet/NDVI/time-series.scss
@@ -2,6 +2,9 @@
 
 .time-series-component {
   margin-bottom: 22px;
+  .row {
+    flex-direction: row;
+  }
   .time-serie-component {
     height: 21px;
     margin-top: 7px;
